--- a/.appsody-config.yaml
+++ b/.appsody-config.yaml
@@ -1,3 +1,3 @@
 id: "20210111192756.93936334"
 project-name: test-my-stack
-stack: kabanero-noauth/jazzcash-custom-stack:0.4
+stack: image-registry.openshift-image-registry.svc:5000/kabanero-noauth/jazzcash-custom-stack:0.4
